[package]
name = "stm32f042"
version = "0.1.0"
authors = ["Roman Valls Guimera <brainstorm@nopcode.org>", "Josh Johnson"]
edition = "2018"

[dependencies]
embedded-hal = "1.0.0"
defmt = "0.3.5"
usb-device = "0.3.2"
usbd-hid = "0.6.1"
rtt-target = { version = "0.3.1", features = ["cortex-m"] }
panic-halt = "0.2.0"
panic-rtt-target = { version = "0.1.1", features = ["cortex-m"] }
cortex-m = "0.7.7"
cortex-m-rtic = { version = "0.5.9", default-features = false, features = ["cortex-m-7"] }
stm32f0xx-hal = { version = "0.18.0", features = ["rt", "stm32f042", "stm32-usbd"] }
stm32-usbd = { version = "0.6.0" }
