[package]
name = "nrf52_monotonic"
categories = ["embedded", "no-std"]
authors = ["Emil Fresk <emil.fresk@gmail.com>"]
description = "Example Monotonic trait"
keywords = ["arm", "cortex-m"]
license = "MIT OR Apache-2.0"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m-rtic = "1.1.4"
fugit = "0.3.3"
rtic-monotonic = "1.0.0"
panic-rtt-target = { version = "0.1.2", features = ["cortex-m"] }
rtt-target = { version = "0.3.1", features = ["cortex-m"] }

[dependencies.nrf52832-hal]
version = "0.16.0"
default-features = false
features = ["xxAA-package", "rt"]

# this lets you use `cargo fix`!
[[bin]]
name = "nrf52_monotonic"
test = false
bench = false

[profile.dev]
opt-level = 1
codegen-units = 16
debug = true
lto = false

[profile.release]
opt-level = "s"   # optimize for size
codegen-units = 1 # better optimizations
debug = true      # symbols are nice and they don't increase the size on Flash
lto = true        # better optimizations
