[package]
name = "stm32f042"
version = "0.1.0"
authors = ["Roman Valls Guimera <brainstorm@nopcode.org>", "Josh Johnson"]
edition = "2018"

[dependencies]
embedded-hal = "0.2.6"
usb-device = "0.2.8"
usbd-hid = "0.6.1"
rtt-target = { version = "0.3.1", features = ["cortex-m"] }
panic-halt = "0.2.0"
cortex-m = "0.7.4"
cortex-m-rtic = "1.0.0"
stm32f0xx-hal = { version = "0.18.0", features = [
    "rt",
    "stm32f042",
    "stm32-usbd",
] }
stm32-usbd = "0.6.0"
