[package]
name = "stm32f411-edge-counter"
version = "0.1.0"
authors = ["Rafael Bachmann <rafael.bachmann.93@gmail.com"]
edition = "2021"

[dependencies]
cortex-m-rtic = "1.0.0"
systick-monotonic = "1.0.0"

[dependencies.rtt-target]
version = "0.3.1"
features = ["cortex-m"]

[dependencies.panic-rtt-target]
version = "0.1.2"
features = ["cortex-m"]

[dependencies.stm32f4xx-hal]
git = "https://github.com/stm32-rs/stm32f4xx-hal.git"
features = ["stm32f411", "rt", "rtic-monotonic"]
