[package]
name = "stm32f4_pwm_input"
version = "0.1.0"
authors = ["Joshua Salzedo <jsalzedo0@saddleback.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m-rtic = "1.1.4"

[dependencies.rtt-target]
version = "0.3.1"
features = ["cortex-m"]

[dependencies.panic-rtt-target]
version = "0.1.2"
features = ["cortex-m"]

[dependencies.stm32f4xx-hal]
version = "0.19"
features = ["stm32f446"]
