[package]
name = "app"
categories = ["embedded", "no-std"]
authors = ["Danilo Bargen <mail@dbrgn.ch>"]
description = "Example Monotonic trait"
keywords = ["arm", "cortex-m"]
license = "MIT OR Apache-2.0"
version = "0.1.0"
edition = "2018"

[dependencies]
cortex-m-rtic = "0.5.1"
panic-halt = { version = "0.2.0" }
stm32l0xx-hal = { version = "0.6", features = ["rt", "mcu-STM32L071KBTx"] }

# this lets you use `cargo fix`!
[[bin]]
name = "app"
test = false
bench = false

[profile.dev]
opt-level = 1
codegen-units = 16
debug = true
lto = false

[profile.release]
opt-level = "s"     # optimize for size
codegen-units = 1   # better optimizations
debug = true        # symbols are nice and they don't increase the size on Flash
lto = true          # better optimizations
